--- a/.travis.yml
+++ b/.travis.yml
@@ -10,16 +10,16 @@ rvm:
 #  - 2.3.0
 script: bundle exec rake test
 env:
-  - PUPPET_GEM_VERSION="~> 4.0.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.1.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.2.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.3.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.4.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.5.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.6.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.7.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.8.0" STRICT_VARIABLES=yes
-  - PUPPET_GEM_VERSION="~> 4.9.0" STRICT_VARIABLES=yes
+  - PUPPET_GEM_VERSION="~> 4.0.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.1.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.2.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.3.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.4.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.5.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.6.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.7.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.8.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
+  - PUPPET_GEM_VERSION="~> 4.9.0" STRICT_VARIABLES=yes FACTER_GEM_VERSION="~> 2.4.0"
 #matrix:
 #  exclude:
 #   Ruby 1.9.3
