--- a/.fixtures.yml
+++ b/.fixtures.yml
@@ -3,3 +3,6 @@ fixtures:
     stdlib: "https://github.com/puppetlabs/puppetlabs-stdlib.git"
   symlinks:
     pe_backup: "#{source_dir}"
+  forge_modules:
+    cron: 'puppetlabs-cron_core'
+
